spacing in between ads resolved

--- a/css/hhss.css
+++ b/css/hhss.css
@@ -150,8 +150,8 @@ img.hulalogo {
     position: relative;
 }
 
-.adclothes, .adhomegoods {
-    margin-bottom: 8vw;
+.adclothes, .adhomegoods, .adquilts {
+    padding-bottom: 8vw;
 }
 
 /*=============ADCLOTHES============*/
@@ -202,7 +202,6 @@ img.clothesimg {
     grid-template-rows: .75fr;
     height: auto;
     justify-items: center;
-    padding-top: 150px;
 }
 
 .box1, .box2, .box3, .box4, .box5 {
